modules/fargate/27-alb.tf
# alb

resource "aws_alb" "main" {
  name            = "tf-ecs-${var.name}-${var.stage}-app"
  subnets         = ["${aws_subnet.public.*.id}"]
  security_groups = ["${aws_security_group.lb.id}"]
}

resource "aws_alb_target_group" "app" {
  name        = "tf-ecs-${var.name}-${var.stage}-app"
  port        = "${var.external_port}"
  protocol    = "HTTP"
  vpc_id      = "${aws_vpc.main.id}"
  target_type = "ip"
}

resource "aws_alb_listener" "front" {
  load_balancer_arn = "${aws_alb.main.id}"
  port              = "${var.external_port}"
  protocol          = "HTTP"

  default_action {
    target_group_arn = "${aws_alb_target_group.app.id}"
    type             = "forward"
  }
}
